# ulp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE-29JAN2026.md  INDEX-29JAN2026.md  README-29JAN2026.md
docs/api/: MODELS-29JAN2026.md  PUBLIC-API-29JAN2026.md
docs/guides/: CLI-REFERENCE-29JAN2026.md  QUICKSTART-29JAN2026.md  USER-GUIDE-29JAN2026.md
docs/reference/: PARSERS-29JAN2026.md
src/ulp/: __init__.py  __main__.py
src/ulp/application/: __init__.py  correlate_logs.py  parse_logs.py  ports.py
src/ulp/cli/: __init__.py  commands.py  main.py  output.py
src/ulp/core/: __init__.py  base.py  exceptions.py  models.py  security.py
src/ulp/correlation/: __init__.py
src/ulp/detection/: __init__.py  detector.py  signatures.py
src/ulp/domain/: __init__.py  entities.py  services.py
src/ulp/infrastructure/: __init__.py
src/ulp/infrastructure/adapters/: __init__.py  detection.py  parser_registry.py
src/ulp/infrastructure/correlation/: __init__.py  strategies.py
src/ulp/infrastructure/normalization/: __init__.py  pipeline.py  steps.py
src/ulp/infrastructure/sources/: __init__.py  file_source.py  stdin_source.py
src/ulp/normalization/: __init__.py
src/ulp/parsers/: __init__.py  apache.py  docker.py  generic.py  json_parser.py  kubernetes.py  nginx.py  python_logging.py  syslog.py
tests/: __init__.py  conftest.py  test_cli.py  test_detection.py  test_domain.py  test_infrastructure.py  test_models.py  test_parsers.py  test_security.py
